# backend/internal/storage/gen/models.go
@@ -118,6 +118,7 @@ type Repo struct {
 	IssueSyncGoneAction           string    `json:"issue_sync_gone_action"`
 	IssueSyncGoneLabel            string    `json:"issue_sync_gone_label"`
 	IssueCommentSyncEnabled       int64     `json:"issue_comment_sync_enabled"`
+	MaxConcurrentRuns             *int64    `json:"max_concurrent_runs"`
 }
 
 type Task struct {
